--- a/public/stylesheets/newstuff.css
+++ b/public/stylesheets/newstuff.css
@@ -106,8 +106,9 @@ border: none 0px #fff !important;
 ul#menu, ul#priority_menu {
 	text-align: left; 
 	margin: 0px; 
+	margin-bottom: 10px;
 	list-style-type: none;
-	height: 20px;
+	height: 21px;
 }
 ul#priority_menu {
 /*	background-color: #f0f0f0; */
@@ -117,7 +118,7 @@ ul#priority_menu {
 
 
 #priority_nav1 ul#priority_menu{
-	height: 20px !important; 
+	height: 21px !important; 
 }
 
 #priority_nav1 ul#priority_menu li{
@@ -241,15 +242,16 @@ ul#menu li .tab_body {
 /* second nav */
 #nav_sub {
 	z-index: -1;	
-	font-size: 1.2em;	
+	font-size: 13px;	
 }
 ul#menu_sub { 
 	background-color: #fff;
 	text-align: left;
 	margin: 0px;
-	margin-top: 10px; 
+	margin-bottom: 0px !important;
 	list-style-type: none;
-	padding: 0px 10px 2px 0px;
+/*	padding-bottom: 4px;
+	padding: 0px 10px 2px 0px; */
 }
 
 ul#menu_sub li .tab_header a {
@@ -276,7 +278,7 @@ ul#menu_sub li.mega .tab_header a {
 /* third nav */
 #nav_third {
 	background-color: #fff;
-	margin-top: 7px;
+/*	margin-top: 4px; */
 	z-index: -1;	
 	font-size: 1.1em;
 }
